--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,21 @@
 .App {
   text-align: center;
+  width: 100%;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 10s linear;
+  height: 100%;
   pointer-events: none;
+  width: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
+  width: 100%;
+  background-color: rgba(40, 44, 52, 0.12);
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /*flex-direction: row;*/
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
